--- a/tasks/firefly.yml
+++ b/tasks/firefly.yml
@@ -44,9 +44,11 @@
       APP_ENV: "local"
       APP_KEY: "{{ lookup('password', firefly_data_directory + '/creds/firefly_app_key length=32') }}"
       DB_HOST: "postgres"
+      DB_PORT: "5432"
       DB_DATABASE: "firefly"
       DB_USERNAME: "firefly"
       DB_PASSWORD: "{{ lookup('password', firefly_data_directory + '/creds/firefly_postgres_passwd length=32') }}"
+      TRUSTED_PROXIES: "172.16.0.0/12"
       TZ: "{{ ansible_nas_timezone }}"
     restart_policy: unless-stopped
     memory: 1g
