--- a/tasks/glances.yml
+++ b/tasks/glances.yml
@@ -20,4 +20,5 @@
       traefik.enable: "{{ glances_available_externally }}"
       traefik.http.services.glances-svc.loadbalancer.server.port: "61208"
       traefik.http.routers.glances.rule: "Host(`glances.{{ ansible_nas_domain }}`)"
+      traefik.http.routers.glances.middlewares: "{% if ldap_enabled|default(false)|bool %}auth-sso{% endif %}"
       traefik.http.routers.glances.tls: "true"
