--- a/tasks/heimdall.yml
+++ b/tasks/heimdall.yml
@@ -24,6 +24,11 @@
   with_items:
     - "{{ heimdall_data_directory }}"
 
+- name: Template Heimdall nginx config
+  template:
+    src: heimdall/nginx-sso.conf
+    dest: "{{ heimdall_data_directory }}/nginx/site-confs/default"
+
 - name: Create Heimdall container
   docker_container:
     name: heimdall
@@ -47,4 +52,5 @@
       traefik.enable: "{{ heimdall_available_externally }}"
       traefik.http.services.heimdall-svc.loadbalancer.server.port: "80"
       traefik.http.routers.heimdall.rule: "Host(`heimdall.{{ ansible_nas_domain }}`)"
+      traefik.http.routers.heimdall.middlewares: "{% if ldap_enabled|default(false)|bool %}auth-sso{% endif %}"
       traefik.http.routers.heimdall.tls: "true"
