--- a/tasks/netdata.yml
+++ b/tasks/netdata.yml
@@ -32,4 +32,5 @@
       traefik.enable: "{{ netdata_available_externally }}"
       traefik.http.services.netdata-svc.loadbalancer.server.port: "19999"
       traefik.http.routers.netdata.rule: "Host(`netdata.{{ ansible_nas_domain }}`)"
+      traefik.http.routers.netdata.middlewares: "{% if ldap_enabled|default(false)|bool %}auth-sso{% endif %}"
       traefik.http.routers.netdata.tls: "true"
