--- a/tasks/stats.yml
+++ b/tasks/stats.yml
@@ -47,6 +47,9 @@
     volumes:
       - "{{ telegraf_data_directory }}/telegraf.conf:/etc/telegraf/telegraf.conf:ro"
       - "/var/run/docker.sock:/var/run/docker.sock:ro"
+      - /proc:/host/proc:ro
+    env:
+      HOST_PROC: /host/proc
     restart_policy: unless-stopped
     memory: 1g
 
@@ -62,6 +65,10 @@
     purge_networks: true
     networks:
       - name: web
+    env:
+      GF_SERVER_ROOT_URL: "%(protocol)s://%(domain)s"
+      GF_SERVER_DOMAIN: "{{ ('grafana.' + ansible_nas_domain) if (grafana_available_externally | bool) or omit }}"
+      GF_USERS_ALLOW_SIGN_UP: "false"
     pull: true
     volumes:
       - "{{ grafana_data_directory }}/data:/var/lib/grafana:rw"
