--- a/tasks/homeassistant.yml
+++ b/tasks/homeassistant.yml
@@ -18,6 +18,7 @@
       TZ: "{{ ansible_nas_timezone }}"
     labels:
       traefik.enable: "{{ homeassistant_available_externally }}"
+      traefik.docker.network: ""
       traefik.http.services.homeassistant-svc.loadbalancer.server.port: "8123"
       traefik.http.routers.homeassistant.rule: "Host(`hass.{{ ansible_nas_domain }}`)"
       traefik.http.routers.homeassistant.tls: "true"
