--- a/tasks/glances.yml
+++ b/tasks/glances.yml
@@ -18,6 +18,7 @@
     memory: 1g
     labels:
       traefik.enable: "{{ glances_available_externally }}"
+      traefik.docker.network: ""
       traefik.http.services.glances-svc.loadbalancer.server.port: "61208"
       traefik.http.routers.glances.rule: "Host(`glances.{{ ansible_nas_domain }}`)"
       traefik.http.routers.glances.middlewares: "{% if ldap_enabled|default(false)|bool %}auth-sso{% endif %}"
