--- a/tasks/homebridge.yml
+++ b/tasks/homebridge.yml
@@ -24,6 +24,7 @@
     memory: 1g
     labels:
       traefik.enable: "{{ homebridge_available_externally }}"
+      traefik.docker.network: ""
       traefik.http.services.homebridge-svc.loadbalancer.server.port: "8087"
       traefik.http.routers.homebridge.rule: "Host(`homebridge.{{ ansible_nas_domain }}`)"
       traefik.http.routers.homebridge.tls: "true"
