--- a/group_vars/all.yml
+++ b/group_vars/all.yml
@@ -849,7 +849,7 @@ bitwarden_port_b: "3012"
 # Keep this token secret, this is password to access admin area of your server!
 # This token can be anything, but it's recommended to use a long, randomly generated string of characters,
 # for example running openssl rand -base64 48
-bitwarden_admin_token: qwertyuiop1234567890poiuytrewq0987654321
+bitwarden_admin_token: "{{ lookup('password', creds_direcrory +'/bitwarden/admin_token length=48') }}"
 
 # To create a user set this to "true", and reprovision the container by re-running the ansible-nas playbook.
 # Once you have created your user, set to "false" and run one more time.
