--- a/tasks/ombi.yml
+++ b/tasks/ombi.yml
@@ -17,7 +17,7 @@
     ports:
       - "3579:3579"
     etc_hosts:
-      host.docker.internal: "172.17.0.1"
+      host.docker.internal: "{{ host_docker_internal_ip }}"
     env:
       TZ: "{{ ansible_nas_timezone }}"
       PUID: "{{ ombi_user_id }}"
