--- a/tasks/stats.yml
+++ b/tasks/stats.yml
@@ -73,6 +73,7 @@
       NUT_PORT: "{{ stat_ups_nut_port | default('3493') }}"
       UPS_ALIAS: "{{ stat_ups_nut_ups_name }}"
       WATTS: "{{ stat_ups_nut_ups_watts | default(omit) }}"
+      INTERVAL: "{{ stat_ups_nut_collection_interval }}"
       TZ: "{{ ansible_nas_timezone }}"
     memory: 128m
 
