--- a/tasks/duplicati.yml
+++ b/tasks/duplicati.yml
@@ -6,6 +6,12 @@
   with_items:
     - "{{ duplicati_data_directory }}"
 
+- name: Template Dupicati cont-init.d script
+  template:
+    src: duplicati/40-custom_config
+    dest: "{{ duplicati_data_directory }}/40-custom_config"
+    mode: 0755
+
 - name: Dupicati Docker Container
   docker_container:
     name: duplicati
@@ -18,6 +24,7 @@
       - "{{ duplicati_port }}:8200"
     volumes:
       - "{{ duplicati_data_directory }}:/config:rw"
+      - "{{ duplicati_data_directory }}/40-custom_config:/etc/cont-init.d/40-custom_config:ro"
       - "{{ samba_shares_root }}:/source/shares:ro"
       - "{{ docker_home }}:/source/docker:ro"
       - "/etc/timezone:/etc/timezone:ro"
